fix: cleanup and refactor to modules

--- a/001-data-exploration.ipynb
+++ b/001-data-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
    ],
    "source": [
     "# create the dataset from matlab file\n",
-    "mat = scipy.io.loadmat('dataset/ARS_DLR_DataSet.mat', squeeze_me=True, struct_as_record=True)\n",
+    "mat = scipy.io.loadmat('dataset-orig/ARS_DLR_DataSet.mat', squeeze_me=True, struct_as_record=True)\n",
     "print('Number of keys of the dict element', len(mat.keys()))\n",
     "print()\n",
     "print('Keys:')\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 90,
    "metadata": {
     "scrolled": false
    },
@@ -103,7 +103,7 @@
        "       array([    1,  7743,  8388, 45040, 45929, 48078], dtype=uint16)], dtype=object)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "         3.48073800e-01])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "         0.4732547 ,  -0.1660974 ])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -267,20 +267,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "config = {\n",
+    "    # fill transients with interpolated activities\n",
+    "    # if this is true, remove_transients should be false\n",
     "    'fill_transients': False,\n",
     "    'remove_transients': True,\n",
     "    'adapted_labels_colname': 'adapted_labels',\n",
-    "    'out_filename': 'prova',\n",
+    "    'out_filename': 'augmented',\n",
     "    'convert_to_gf': False,\n",
-    "    'normalize_sensor': False,\n",
+    "    'normalize_sensor': True,\n",
     "    'frame_window': 128,\n",
     "    'frame_stride': 64,\n",
-    "    'augment_sensors': False,\n",
+    "    'augment_sensors': True,\n",
     "    'augment_factor': 0.35\n",
     "}"
    ]
@@ -297,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
@@ -342,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +359,7 @@
    ],
    "source": [
     "for dataset in datasets:\n",
-    "    mat = scipy.io.loadmat('dataset/{}'.format(dataset), squeeze_me=True, struct_as_record=True)\n",
+    "    mat = scipy.io.loadmat('dataset-orig/{}'.format(dataset), squeeze_me=True, struct_as_record=True)\n",
     "    keys = [k for k in mat.keys() if k[0] != '_']\n",
     "    for j, k in enumerate(keys):\n",
     "        \"\"\"\n",
@@ -429,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +556,7 @@
        "4  0.067737  standing  ARS_Maria_Real_Sitting_Heading_2  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +576,7 @@
        "(2188965, 9)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +657,7 @@
        "Name: labels, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 100,
    "metadata": {
     "collapsed": true
    },
@@ -689,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -708,8 +712,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# remove the transients\n",
@@ -719,10 +725,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 103,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# flattens a nested list\n",
@@ -793,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +813,7 @@
        "Name: labels, dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -856,8 +860,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# normalize acceleration and gyroscope\n",
@@ -893,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -925,8 +931,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "window = config['frame_window']\n",
@@ -968,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -996,8 +1004,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_train, x_test, y_train, y_test = train_test_split(np.array(x), y,\n",
@@ -1008,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1034,21 +1044,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "Data must be 1-dimensional",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-89-6f9000f5d66f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m ys = {\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;34m'full'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;34m'train'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m'test'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m }\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, dtype, name, copy, fastpath)\u001b[0m\n\u001b[1;32m    246\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    247\u001b[0m                 data = _sanitize_array(data, index, dtype, copy,\n\u001b[0;32m--> 248\u001b[0;31m                                        raise_cast_failure=True)\n\u001b[0m\u001b[1;32m    249\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    250\u001b[0m                 \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSingleBlockManager\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfastpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m_sanitize_array\u001b[0;34m(data, index, dtype, copy, raise_cast_failure)\u001b[0m\n\u001b[1;32m   3025\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0msubarr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3026\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3027\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Data must be 1-dimensional'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3028\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3029\u001b[0m             \u001b[0msubarr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_asarray_tuplesafe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: Data must be 1-dimensional"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full</th>\n",
+       "      <th>test</th>\n",
+       "      <th>train</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>standing</th>\n",
+       "      <td>0.396532</td>\n",
+       "      <td>0.396567</td>\n",
+       "      <td>0.396523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>walking</th>\n",
+       "      <td>0.236889</td>\n",
+       "      <td>0.236819</td>\n",
+       "      <td>0.236907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sitting</th>\n",
+       "      <td>0.193309</td>\n",
+       "      <td>0.193204</td>\n",
+       "      <td>0.193335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lying</th>\n",
+       "      <td>0.092626</td>\n",
+       "      <td>0.092661</td>\n",
+       "      <td>0.092617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>running</th>\n",
+       "      <td>0.049361</td>\n",
+       "      <td>0.049396</td>\n",
+       "      <td>0.049352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jumping</th>\n",
+       "      <td>0.024838</td>\n",
+       "      <td>0.024873</td>\n",
+       "      <td>0.024829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>falling</th>\n",
+       "      <td>0.006446</td>\n",
+       "      <td>0.006481</td>\n",
+       "      <td>0.006437</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              full      test     train\n",
+       "standing  0.396532  0.396567  0.396523\n",
+       "walking   0.236889  0.236819  0.236907\n",
+       "sitting   0.193309  0.193204  0.193335\n",
+       "lying     0.092626  0.092661  0.092617\n",
+       "running   0.049361  0.049396  0.049352\n",
+       "jumping   0.024838  0.024873  0.024829\n",
+       "falling   0.006446  0.006481  0.006437"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1096,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -1136,9 +1221,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classes have to be augmented by this number of values\n",
+      "lying      1054\n",
+      "running    2042\n",
+      "jumping    2602\n",
+      "falling    3022\n",
+      "dtype: int64\n",
+      "Shape of the augmented sensor values\n",
+      "(8720, 128, 6)\n",
+      "Final shape of the training set and labels\n",
+      "(31556, 128, 6) 31556\n",
+      "Check if the labels are now more balanced\n",
+      "standing    9055\n",
+      "walking     5410\n",
+      "sitting     4415\n",
+      "lying       3169\n",
+      "jumping     3169\n",
+      "falling     3169\n",
+      "running     3169\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "if config['augment_sensors']:\n",
     "    ys_train = pd.Series(y_train)\n",
@@ -1147,7 +1258,7 @@
     "    lower_bound = int(ys_train.value_counts().max() * config['augment_factor'])\n",
     "    # number of elements needed for each class to be balanced\n",
     "    augment_amount = lower_bound - ys_train.value_counts()\n",
-    "    augment_amount = augment_amount[se>0]\n",
+    "    augment_amount = augment_amount[augment_amount>0]\n",
     "    print('Classes have to be augmented by this number of values')\n",
     "    print(augment_amount)\n",
     "    \n",
@@ -1227,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1346,7 @@
      "output_type": "stream",
      "text": [
       "y_train with one hot encoding dimension check\n",
-      "(22836, 7)\n"
+      "(31556, 7)\n"
      ]
     }
    ],
@@ -1257,37 +1368,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# saving all the files\n",
-    "with h5py.File('train-{}.h5'.format(config['out_filename']), 'w') as hf:\n",
+    "with h5py.File('datasets/train-{}.h5'.format(config['out_filename']), 'w') as hf:\n",
     "    hf.create_dataset(\"x\",  data=x_train)\n",
     "    hf.create_dataset(\"y\",  data=y_train_ohe)\n",
-    "with h5py.File('test-{}.h5'.format(config['out_filename']), 'w') as hf:\n",
+    "with h5py.File('datasets/test-{}.h5'.format(config['out_filename']), 'w') as hf:\n",
     "    hf.create_dataset(\"x\",  data=x_test)\n",
     "    hf.create_dataset(\"y\",  data=y_test_ohe)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(22836, 7) (22836, 7)\n",
-      "(22836, 128, 6) (22836, 128, 6)\n"
+      "(31556, 7) (31556, 7)\n",
+      "(31556, 128, 6) (31556, 128, 6)\n"
      ]
     }
    ],
    "source": [
-    "with h5py.File('train-{}.h5'.format(config['out_filename']), 'r') as hf:\n",
+    "with h5py.File('datasets/train-{}.h5'.format(config['out_filename']), 'r') as hf:\n",
     "    x = hf['x'][:]\n",
     "    y = hf['y'][:]\n",
     "print(y.shape, y_train_ohe.shape)\n",
