--- a/001-data-exploration.ipynb
+++ b/001-data-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -279,7 +279,7 @@
     "    'fill_transients': False,\n",
     "    'remove_transients': True,\n",
     "    'adapted_labels_colname': 'adapted_labels',\n",
-    "    'out_filename': 'augmented',\n",
+    "    'out_filename': 'boh',\n",
     "    'convert_to_gf': False,\n",
     "    'normalize_sensor': True,\n",
     "    'frame_window': 128,\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "4  0.067737  standing  ARS_Maria_Real_Sitting_Heading_2  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "(2188965, 9)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "Name: labels, dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -725,8 +725,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# flattens a nested list\n",
@@ -797,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +815,7 @@
        "Name: labels, dtype: float64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -860,10 +862,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# normalize acceleration and gyroscope\n",
