fix: ignore dataset

--- a/model-testing/real-time.ipynb
+++ b/model-testing/real-time.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# generic imports\n",
@@ -62,7 +64,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tests on simulated real time data from training set"
+    "# Tests on simulated real time data from training set\n",
+    "To use the dataset `df.csv` you should export the DataFrame from `001-data-exploration.ipynb`. The dataset is the original one, NOT normalized, without the transients."
    ]
   },
   {
