feat: improved prediction accuracy

--- a/001-data-exploration.ipynb
+++ b/001-data-exploration.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -279,12 +279,12 @@
     "    'fill_transients': False,\n",
     "    'remove_transients': True,\n",
     "    'adapted_labels_colname': 'adapted_labels',\n",
-    "    'out_filename': '',\n",
+    "    'out_filename': 'perot',\n",
     "    'convert_to_gf': False,\n",
     "    'normalize_sensor': True,\n",
     "    'frame_window': 128,\n",
     "    'frame_stride': 64,\n",
-    "    'augment_sensors': False,\n",
+    "    'augment_sensors': True,\n",
     "    'augment_factor': 0.35\n",
     "}"
    ]
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "4  0.067737  standing  ARS_Maria_Real_Sitting_Heading_2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "(2188965, 9)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "Name: labels, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "Name: labels, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
        "falling   0.006446  0.006481  0.006437"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,70 +1156,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normalization\n",
-    "Normalization is done both on test and training but using only training set `mean` and `std`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ -8.33711405e+00   6.74759490e-01   7.00107768e-01  -1.04606607e-02\n",
-      "   6.75372537e-03   2.03051039e-02]\n",
-      "[ 4.27451193  3.23502816  3.52895212  0.53593171  0.42801951  0.35004746]\n",
-      "Train mean of 0 is 1.7424072344349394e-13, std is 1.000000000000005\n",
-      "Test mean of 0 is -0.007112043369769829, std is 0.9980155574029956\n",
-      "\n",
-      "Train mean of 1 is 8.370117039864932e-15, std is 1.0000000000000009\n",
-      "Test mean of 1 is -0.01105309669365322, std is 1.0015493816203422\n",
-      "\n",
-      "Train mean of 2 is -1.5026418442767774e-15, std is 1.0000000000000018\n",
-      "Test mean of 2 is -0.004363142404038606, std is 0.9903184799624922\n",
-      "\n",
-      "Train mean of 3 is 9.637004220846373e-16, std is 1.0000000000000613\n",
-      "Test mean of 3 is 0.00422128514078103, std is 0.9703579466180108\n",
-      "\n",
-      "Train mean of 4 is -7.109394523427303e-16, std is 1.0000000000000349\n",
-      "Test mean of 4 is 0.0014023592128524106, std is 0.9818323167266937\n",
-      "\n",
-      "Train mean of 5 is -4.292590105405663e-15, std is 1.000000000000005\n",
-      "Test mean of 5 is 0.005484954617270877, std is 1.0106427787614183\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "def normalize(x, mean = None, std = None):\n",
-    "    # x is in the form [samplesnr, windowsize, 6]\n",
-    "    x_reshaped = x.reshape(-1, x.shape[-1])\n",
-    "    if mean is None:\n",
-    "        # mean of each column/sensor\n",
-    "        mean = x_reshaped.mean(axis=0)\n",
-    "        std = x_reshaped.std(axis=0)\n",
-    "    x_reshaped = (x_reshaped-mean)/std\n",
-    "    # reshape back to original shape\n",
-    "    return x_reshaped.reshape(x.shape), mean, std\n",
-    "\n",
-    "if config['normalize_sensor']:\n",
-    "    x_train, train_mean, train_std = normalize(x_train)\n",
-    "    print(train_mean)\n",
-    "    print(train_std)\n",
-    "    x_test = normalize(x_test, train_mean, train_std)[0]\n",
-    "    for i in np.arange(x_train.shape[-1]):\n",
-    "        print('Train mean of {} is {}, std is {}'.format(i, x_train[:,:,i].mean(), x_train[:,:,i].std()))\n",
-    "        print('Test mean of {} is {}, std is {}'.format(i, x_test[:,:,i].mean(), x_test[:,:,i].std()))\n",
-    "        print()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Training set data augmentation\n",
     "The goal is to augment each class proportionally to how well its class is represented.\n",
     "\n",
@@ -1228,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -1268,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1289,10 +1225,10 @@
       "standing    9055\n",
       "walking     5410\n",
       "sitting     4415\n",
-      "falling     3169\n",
       "jumping     3169\n",
-      "lying       3169\n",
       "running     3169\n",
+      "falling     3169\n",
+      "lying       3169\n",
       "dtype: int64\n"
      ]
     }
@@ -1325,10 +1261,9 @@
     "            \n",
     "            # apply transformations\n",
     "            rotate = DA_Rotation(window_sample)\n",
-    "            permute = DA_Permutation(window_sample)\n",
+    "            permute = DA_Permutation(rotate)\n",
     "            \n",
     "            # span acc and gyr in depth so to end up with a dimension (?, window_size, 6)\n",
-    "            #print('uno')\n",
     "            augmented_values += permute.reshape(1, permute.shape[0], permute.shape[1]).tolist()\n",
     "            labels.append(activity)\n",
     "\n",
@@ -1349,31 +1284,67 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### THIS FUNCTION HAS BEEN REPLACED ATM #####\n",
-    "# permute window segments partitions along the time axis\n",
-    "def DA_Permutation(X, n_perm = 4):\n",
-    "    arr = []\n",
-    "    segment_len = math.floor(X.shape[0]/n_perm)\n",
-    "    start = 0\n",
-    "    end = segment_len\n",
-    "    for i in range(0, n_perm):\n",
-    "        # in last iteration, get elements until the end\n",
-    "        if i == n_perm-1:\n",
-    "            end = X.shape[0]\n",
-    "        arr += [X[start:end, :].tolist()]\n",
-    "        start = end\n",
-    "        end += segment_len\n",
-    "    arr = np.random.permutation(arr)\n",
-    "    arr = [item for sublist in arr for item in sublist]\n",
-    "    return np.array(arr)\n",
-    "X = np.random.randint(0,10,48).reshape(-1,6)\n",
-    "print(X)\n",
-    "arr = DA_Permutation(X)\n",
-    "print()\n",
-    "print(arr)"
+    "## Normalization\n",
+    "Normalization is done both on test and training but using only training set `mean` and `std`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -6.63408026e+00   4.60936859e-01   6.43905775e-01  -2.03518553e-03\n",
+      "  -5.58510494e-04   8.67845878e-03]\n",
+      "[ 6.32075473  4.92475663  5.06105046  0.72654258  0.67187492  0.6213516 ]\n",
+      "Train mean of 0 is 7.532752748628229e-14, std is 0.9999999999999967\n",
+      "Test mean of 0 is -0.2742448304598134, std is 0.6749240529554472\n",
+      "\n",
+      "Train mean of 1 is 2.946034987910375e-15, std is 1.000000000000006\n",
+      "Test mean of 1 is 0.036157228661993106, std is 0.6579087442743354\n",
+      "\n",
+      "Train mean of 2 is -5.091911456076488e-15, std is 1.000000000000006\n",
+      "Test mean of 2 is 0.008062490756893111, std is 0.69052591623083\n",
+      "\n",
+      "Train mean of 3 is 2.6595252528034233e-16, std is 1.0000000000000004\n",
+      "Test mean of 3 is -0.008482853992074638, std is 0.7157812990141973\n",
+      "\n",
+      "Train mean of 4 is 1.2905691782640383e-16, std is 1.0000000000000122\n",
+      "Test mean of 4 is 0.011776705406780696, std is 0.6254786094940328\n",
+      "\n",
+      "Train mean of 5 is -1.7290995328127073e-15, std is 1.0000000000000016\n",
+      "Test mean of 5 is 0.021801890658761956, std is 0.5693603104671084\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def normalize(x, mean = None, std = None):\n",
+    "    # x is in the form [samplesnr, windowsize, 6]\n",
+    "    x_reshaped = x.reshape(-1, x.shape[-1])\n",
+    "    if mean is None:\n",
+    "        # mean of each column/sensor\n",
+    "        mean = x_reshaped.mean(axis=0)\n",
+    "        std = x_reshaped.std(axis=0)\n",
+    "    x_reshaped = (x_reshaped-mean)/std\n",
+    "    # reshape back to original shape\n",
+    "    return x_reshaped.reshape(x.shape), mean, std\n",
+    "\n",
+    "if config['normalize_sensor']:\n",
+    "    x_train, train_mean, train_std = normalize(x_train)\n",
+    "    print(train_mean)\n",
+    "    print(train_std)\n",
+    "    x_test = normalize(x_test, train_mean, train_std)[0]\n",
+    "    for i in np.arange(x_train.shape[-1]):\n",
+    "        print('Train mean of {} is {}, std is {}'.format(i, x_train[:,:,i].mean(), x_train[:,:,i].std()))\n",
+    "        print('Test mean of {} is {}, std is {}'.format(i, x_test[:,:,i].mean(), x_test[:,:,i].std()))\n",
+    "        print()"
    ]
   },
   {
@@ -1385,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1364,7 @@
      "output_type": "stream",
      "text": [
       "y_train with one hot encoding dimension check\n",
-      "(22836, 7)\n"
+      "(31556, 7)\n"
      ]
     }
    ],
@@ -1415,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1432,15 +1403,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(27352, 7) (27352, 7)\n",
-      "(27352, 128, 6) (27352, 128, 6)\n"
+      "(31556, 7) (31556, 7)\n",
+      "(31556, 128, 6) (31556, 128, 6)\n"
      ]
     }
    ],
